<resources>
    <!--General/Commons-->
    <string name="app_name">Yahtzee</string>
    <string name="placeholder">Placeholder</string>
    <string name="not_your_turn">Not your turn !</string>

    <!-- MainActivity-->
    <string name="play_button">Play</string>
    <string name="options_button">Options</string>
    <string name="stats_button">Stats</string>

    <!-- GameCreationActivity-->
    <string name="game_creation_activity_title">Creation of the game</string>
    <string name="player">Player %1$d</string>
    <string name="start_game_button">Go !</string>
    <string name="error_empty">You have an empty player name</string>
    <string name="error_duplicate">Two players have the same name</string>

    <!-- OptionsActivity-->
    <string name="options_activity_title">Options Page</string>

    <!-- StatsActivity-->
    <string name="stats_activity_title">Stats Page</string>

    <!-- GameActivity-->
    <string name="one_box">Aces</string>
    <string name="two_box">Twos</string>
    <string name="three_box">Threes</string>
    <string name="four_box">Fours</string>
    <string name="five_box">Fives</string>
    <string name="six_box">Sixes</string>
    <string name="bonus_box">Bonus</string>
    <string name="total_number_box">Total</string>

    <string name="grand_total_box">Grand Total</string>

    <string name="three_kind_box">Three of a kind</string>
    <string name="four_kind_box">Four of a kind</string>
    <string name="full_house_box">Full House</string>
    <string name="sm_straight_box">Small straight</string>
    <string name="lg_straight_box">Large straight</string>
    <string name="yahtzee_box">Yahtzee</string>
    <string name="chance_box">Chance</string>
    <string name="total_combination_box">Total</string>

    <string name="player_turn">It is the turn of -></string>

    <!-- EndGameActivity-->
    <string name="button_replay">Replay</string>
    <string name="button_change_players">Change Players</string>
    <string name="button_endgame_to_homepage">Homepage</string>
    <string name="one_winner"> Wins !</string>
    <string name="several_winners"> Win !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_default">0</string>
    <string name="total_default">0</string>
    <string name="name_title" />
    <string name="global_score_button">Scoresheet</string>

</resources>